--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,9 @@
 [build-system]
-requires = ["setuptools>=61.0", "pandas", "shutup", "typo"]
-build-backend = "setuptools.build_meta"
+requires = ["hatchling", "pandas", "shutup", "typo"]
+build-backend = "hatchling.build"
 [project]
 name = "complexifier"
-version = "0.0.1"
+version = "0.0.4"
 authors = [
   { name="Ruy Zambrano", email="ruyzambrano@gmail.com" },
 ]
