--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,7 +28,7 @@ jobs:
 
     - name: Run tests with coverage
       run: |
-        pytest --cov=complexifier tests/
+        pytest --cov=complexifier 
 
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v3
