--- a/.github/workflows/sphinx.yml
+++ b/.github/workflows/sphinx.yml
@@ -13,9 +13,9 @@ jobs:
         persist-credentials: false
         
     - name: Set up Python
-      uses: actions/setup-python@v2
+      uses: actions/setup-python@v4
       with:
-        python-version: '3.x'  # Specify the minimum required Python version
+        python-version: '3.x'
 
     - name: Build HTML
       uses: ammaraskar/sphinx-action@master
