--- a/.github/workflows/sphinx.yml
+++ b/.github/workflows/sphinx.yml
@@ -22,6 +22,9 @@ jobs:
         python -m pip install --upgrade pip 
         pip install -r requirements.txt
 
+    - name: Check installed packages
+      run: python -m pip list
+
     - name: Build HTML
       uses: ammaraskar/sphinx-action@master
 
