--- a/.github/workflows/sphinx.yml
+++ b/.github/workflows/sphinx.yml
@@ -12,18 +12,18 @@ jobs:
       with:
         persist-credentials: false
         
-    - name: Set up Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: '3.x'
+    # - name: Set up Python
+    #   uses: actions/setup-python@v4
+    #   with:
+    #     python-version: '3.x'
 
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip 
-        pip install -r requirements.txt
+    # - name: Install dependencies
+    #   run: |
+    #     python -m pip install --upgrade pip 
+    #     pip install -r requirements.txt
 
-    - name: Check installed packages
-      run: python -m pip list
+    # - name: Check installed packages
+    #   run: python -m pip list
 
     - name: Build HTML
       uses: ammaraskar/sphinx-action@master
